--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <p>
         <h1>Hello World!</h1>
+
+        <img src="images/372327186_266581139508078_3725691890209275897_n.jpg" alt="">
     </p>
 </body>
 </html>
