--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
     <p>
-        <h1>Hello World!</h1>
+        <h1></h1>
 
-        <img src="images/372327186_266581139508078_3725691890209275897_n.jpg" alt="">
+        <img src="images/372327186_266581139508078_3725691890209275897_n.jpg" alt="" class="compadres">
     </p>
 </body>
 </html>
