--- a/express/index.html
+++ b/express/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>
         <h1>hello world!</h1>
+        <p>another bit of writing</p>
 
         <img src="images/372327186_266581139508078_3725691890209275897_n.jpg" alt="" class="compadres">
     </p>
